Datapicker correct visibility

--- a/styles/style.less
+++ b/styles/style.less
@@ -21,3 +21,7 @@ body, html {
     max-width: 600px;
     width: 100%;
 }
+
+#form .ui-slider-handle.ui-state-default.ui-corner-all {
+    z-index: 1;
+}
